--- a/thesis.tex
+++ b/thesis.tex
@@ -8,6 +8,7 @@
 	\usepackage{mathtools}
 	%\usepackage{lastpage}
 	\usepackage{nomencl}
+	\usepackage[font=small]{caption}
 	\usepackage{epigraph}
 	%\setlength{\hoffset}{-10pt}
 	%\setlength{\voffset}{-20pt}
