add bib, required pages and revised first 4 pages

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,15 @@
+% Encoding: UTF-8
+
+@Unpublished{Pick,
+  author = {Pick, L. and Hencl, S. and Spurný, J. and Zelený, M.},
+  title  = {Matematická analýza 1 (velmi předběžná verze)},
+  note   = {Preprint available at \url{http://www.karlin.mff.cuni.cz/~pick/}},
+  month  = apr,
+  year   = {2019},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
+
 %
 %  An example of a bibliographical database for bibTeX
 %
