--- a/chap1.tex
+++ b/chap1.tex
@@ -24,14 +24,14 @@ Pole shifting theorem is one of the basic results of the theory of linear dynami
 
 We will use the matrix form, as it is a very compact way of describing the system.
 
-To express solution of this system in similarly compact matter we will establish the notion of a matrix exponential.
+To express solution of this system in similarly compact way we will establish the notion of a matrix exponential.
 
 \begin{definition}
 	Let $X$ be a real or complex square matrix. The exponential of $X$, denoted by $e^X$, is the square matrix of the same type defined by the series $$e^{X}=\sum _{k=0}^{\infty}\frac{1}{k!}X^{k}\ ,$$
 	where $X^0$ is defined to be the identity matrix $I$ of the same type as $X$.
 \end{definition}
 
-For this definition to be valid, we need to show that the series converges for any real or complex square matrix. Firstly, we will define what does it mean for a matrix series to converge. In this text, we will be using Frobenius norm to describe the notion of the convergence of a matrix series.
+For this definition to make sense, we need to show that the series converges for any real or complex square matrix. Firstly, we will define what does it mean for a matrix series to converge. In this text, we will be using Frobenius norm to describe the notion of the convergence of a matrix series.
 
 \begin{definition}
 	\termdef{Frobenius norm} is a matrix norm, denoted by $\norm{\cdot}_F$, which for an arbitrary $n \times m$ matrix $A$ is defined as $$\norm{A}_F=\sqrt{\sum^n_{i=1}\sum^m_{j=1}\abs{a_{i,j}}^2}\ .$$
@@ -53,28 +53,34 @@ For this definition to be valid, we need to show that the series converges for a
 \end{lemma}
 
 \begin{proof}
-	Can be simply shown using the definition of Frobenius form and properties of the absolute value.
+	First three points can be simply shown using the definition of the Frobenius form and properties of the absolute value. 
+
+	The forth point follows from the Cauchy–Schwarz inequality 
+	$$\norm{CD}^2_F=\sum^m_{i=1}\sum^o_{j=1}\norm{c_id_j}_2^2 \leq \sum^m_{i=1}\sum^o_{j=1}\norm{c_i}_2^2\norm{d_j}_2^2=\sum^m_{i=1}\norm{c_i}_2^2\sum^o_{j=1}\norm{d_j}_2^2=\norm{C}^2_F\norm{D}^2_F\ ,$$
+	where $\norm*{\cdot}_2$ denotes the Euclidean norm, and $c_i,d_i$ denote the $i$-th column of the matrices $C$ and $D$ respectively.
 \end{proof}
 
 \begin{lemma}
 \label{lem:elementAbsoluteSize}
-	Absolute value of any element of a matrix is always less or equal to the Frobenius norm of the matrix. In particular, for a matrix $A^k=(a_{i,j}^{(k)})$, where $A\in\K^{n\times n}$, it holds $\abs*{a_{i,j}^{(k)}}\leq\norm{A^k}_F\leq\norm{A}^k_F$.
+	Absolute value of any element of a matrix is always less than or equal to the Frobenius norm of the matrix. In particular, for a matrix $A^k=(a_{i,j}^{(k)})_{n\times n}$, where $A\in\K^{n\times n}$, for every position $(i,j)$ it holds $\abs*{a_{i,j}^{(k)}}\leq\norm*{A^k}_F\leq\norm{A}^k_F$.
 \end{lemma}
 
 \begin{proof}
-	For non-negative real numbers $a$, $b$ it holds $a\leq\sqrt{a^2+b}$. Therefore, for arbitrary element of the matrix $X=(x_{i,j})$ we can write $$\abs*{x_{i,j}}\leq \sqrt{\sum^n_{i=1}\sum^m_{j=1}\abs*{x_{i,j}}^2}=\norm{X}_F\ .$$ It follows 
+	Obviously, for an arbitrary element of the matrix $X=(x_{i,j})_{n\times m}$ we can write $$\abs*{x_{i,j}}\leq \sqrt{\sum^n_{i=1}\sum^m_{j=1}\abs*{x_{i,j}}^2}=\norm{X}_F\ .$$ It follows 
 	$$\abs*{a_{i,j}^{(k)}}\leq\norm*{A^k}_F\leq\norm{A}^k_F\ ,$$
 	where second inequality follows from Lemma \ref{lem:frobNormProperties}.4.
 \end{proof}
 
 \begin{cor}
 	\label{cor:elementConvergence}
-	Let us have $A^k=(a_{i,j}^{(k)})$. Then the series $\sum^\infty_{k=0}\frac{b^k}{k!}a_{i,j}^{(k)}$ converges absolutely for any $b\in\K$.
+	Let us have $A^k=(a_{i,j}^{(k)})_{n\times n}$. Then the series $\sum^\infty_{k=0}\frac{b^k}{k!}a_{i,j}^{(k)}$ converges absolutely for any $b\in\K$.
 \end{cor}
 
 \begin{proof}
-	By Lemma \ref{lem:elementAbsoluteSize} we have
-	$$\abs{\sum^\infty_{k=0}\frac{bc^k}{k!}a_{i,j}^{(k)}}\leq\sum^\infty_{k=0}\frac{\abs{b}\abs{c}^k}{k!}\abs{a_{i,j}^{(k)}}\leq\sum^\infty_{k=0}\frac{\abs{b}\abs{c}^k}{k!}\norm{A}_F^{k}=\sum^\infty_{k=0}\frac{\norm{cA}_F^k}{k}=e^{\norm{cA}_F}$$
+	By Lemma \ref{lem:elementAbsoluteSize}, for any $N\in\N$, we have
+	$$\sum^N_{k=0}\abs{\frac{b^k}{k!}a_{i,j}^{(k)}}\leq\sum^N_{k=0}\frac{\abs{b}^k}{k!}\abs{a_{i,j}^{(k)}}\leq\sum^N_{k=0}\frac{\abs{b}^k}{k!}\norm{A}_F^{k}=\sum^N_{k=0}\frac{\norm{bA}_F^k}{k}$$
+	Then 
+	$$\sum^\infty_{k=0}\abs{\frac{b^k}{k!}a_{i,j}^{(k)}}=\lim_{N\to\infty}\sum^N_{k=0}\abs{\frac{b^k}{k!}a_{i,j}^{(k)}}\leq\lim_{N\to\infty}\sum^N_{k=0}\frac{\norm{bA}_F^k}{k}=\sum^\infty_{k=0}\frac{\norm{bA}_F^k}{k}=e^{\norm{bA}_F}$$
 \end{proof}
 
 \begin{definition}
@@ -92,16 +98,27 @@ For this definition to be valid, we need to show that the series converges for a
 	Conversely, let $\varepsilon$ be a positive real number. For every position $(i,j)$ we find such $n_{i,j}$ that $$\forall n\geq n_{i,j}:\abs*{a^{(n)}_{i,j}-a_{i,j}}<\frac{\varepsilon}{\sqrt{nm}}\ .$$ We put $N_0=\text{min}\{n_{i,j}\}$. Now $\forall n\in\N, n\geq N_0$ we have $$||A_n-A||_F=\sqrt{\sum^n_{i=1}\sum^m_{j=1}|a^{(n)}_{i,j}-a_{i,j}|^2}<\sqrt{nm\frac{\varepsilon^2}{nm}}=\varepsilon\ .$$
 \end{proof}
 
+\begin{claim}
+\label{claim:matrixExpConv}
+	The definition of the matrix exponential makes sense, that is, the matrix series \label{lem:point:expConv} $\sum _{k=0}^{\infty}\frac{1}{k!}X^{k}$ converges for any matrix $X$.
+\end{claim}
+
+\begin{proof}
+	Let $X^k=(x_{i,j}^{(k)})_{n\times n}$. By Corollary \ref{cor:elementConvergence} every element of matrix $\sum^\infty_{k=0}\frac{1}{k!}X^k=\left(\sum^\infty_{k=0}\frac{1}{k!}x^{(k)}_{i,j}\right)_{n\times n}$ converges absolutely. Therefore the matrix series converges elementwise to some matrix $Y$ (we denote this matrix by $e^X$).
+\end{proof}
+
 \begin{lemma}
 \label{lem:matrixSeriesFactoring}
-	Let $\{A_k\}_{k=0}^\infty$ be a matrix sequence, where $A_k\in\K^{n\times m}$, $B\in\K^{r\times n}$ and $C\in\K^{m\times s}$. If $\sum^\infty_{k=0}A_k$ converges, then also $\sum^\infty_{k=0}A_k$ converges, and the following equality holds
+	Let $\{A_k\}_{k=0}^\infty$ be a matrix sequence, where $A_k\in\K^{n\times m}$, $B\in\K^{r\times n}$ and $C\in\K^{m\times s}$. If $\sum^\infty_{k=0}A_k$ converges, then also $\sum^\infty_{k=0}BA_kC$ converges, and the following equality holds
 	$$B\left(\sum^\infty_{k=0}A_k\right)C=\sum^\infty_{k=0}BA_kC\ .$$
 \end{lemma}
 
 \begin{proof}
 	We know that for $N\in\N$ it is true
 	$$\sum^N_{k=0}BA_kC=B\left(\sum^N_{k=0}A_k\right)C\ .$$
-	We want to now show that the left hand side converges to $B\left(\sum^\infty_{k=0}A_k\right)C$. Let $\varepsilon_1\in\R^+$ be fixed. Since the series $\sum^\infty_{k=0}\frac{1}{k!}A^k$ converges we can find such that for every $N\in\N,N\geq N_0$ it holds 
+	We want to now show that the left hand side converges to $B\left(\sum^\infty_{k=0}A_k\right)C$. Let $\varepsilon_1\in\R^+$ be fixed. Since the series $\sum^\infty_{k=0}A^k$ converges, we can find $N_0$ such that for every $N\in\N,N\geq N_0$ it holds 
+	$$\norm{\sum^\infty_{k=0}A_k-\sum^N_{l=0}A_l}<\varepsilon_1\ .$$
+	Then 
 	\begin{align*}
 		\norm{B\left(\sum^\infty_{k=0}A_k\right)C-\sum^N_{l=0}BA_lC}_F&=
 		\norm{B\left(\sum^\infty_{k=0}A_k\right)C-B\left(\sum^N_{l=0}A_l\right)C}_F=\\
@@ -109,11 +126,10 @@ For this definition to be valid, we need to show that the series converges for a
 		\norm{B}_F\norm{\sum^\infty_{k=0}A_k-\sum^N_{l=0}A_l}_F\norm{C}_F
 		<\norm{B}_F\norm{C}_F\varepsilon_1\ .
 	\end{align*}
-	That concludes the proof for $\varepsilon=\norm{B}_F\norm{C}_F\varepsilon_1$.
+	That concludes the proof that $\sum^\infty_{k=0}BA_kC$ converges to $B\left(\sum^\infty_{k=0}A_k\right)C$.
 \end{proof}
 
 \begin{definition}
-	TODO
 	Let us have a matrix function $X(t)\colon\R\rightarrow\K^{n\times m}$. Then the derivative of the function is $$\frac{d}{dt}X(t)=\left(\frac{d}{dt}x_{i,j}(t)\right)_{n\times m}=\Big(\dot{x}_{i,j}(t)\Big)_{n\times m}\ .$$
 \end{definition}
 
@@ -121,7 +137,6 @@ For this definition to be valid, we need to show that the series converges for a
 \label{lem:expprop}
 	Let $A$, $B$ and $X$ be real or complex $n\times n$ matrices. Then 
 	\begin{enumerate}
-		\item \label{lem:point:expConv} $\sum _{k=0}^{\infty}\frac{1}{k!}X^{k}$ converges for any matrix $X$,
 		\item If $AB = BA$, then $e^{A}B = Be^{A}$,
 		\item If $R$ is invertible, then $e^{R^{-1}XR}=R^{-1}e^XR$,
 		\item $\frac{d}{dt}e^{tX}=Xe^{tX}$, for $t \in \R$,
@@ -131,21 +146,18 @@ For this definition to be valid, we need to show that the series converges for a
 
 \begin{proof}
 	\begin{enumerate}
-		\sloppy
-		\item Let $X^k=(x_{i,j}^{(k)})_{n\times n}$. By Corollary \ref{cor:elementConvergence} every element of matrix $\sum^\infty_{k=0}\frac{1}{k!}X^k=\left(\sum^\infty_{k=0}\frac{1}{k!}x^{(k)}_{i,j}\right)_{n\times n}$ converges absolutely. Therefore the matrix series converges elementwise to some matrix $Y$. By Lemma \ref{lem:elementwiseConvergence} the matrix series converges to matrix $Y$.
-
 		\item
-		Because of the convergence of the matrix exponential we can use Lemma \ref{lem:matrixSeriesFactoring} and we get
+		Because of the convergence of the matrix exponential, we can use Lemma \ref{lem:matrixSeriesFactoring} and we get
 		$$e^{A}B=\sum^\infty_{k=0}\frac{1}{k!}A^{k}B\stackrel{AB=BA}{=\joinrel=\joinrel=}\sum^\infty_{k=0}\frac{1}{k!}BA^{k}=B\sum^\infty_{k=0}\frac{1}{k!}A^{k}=Be^{A}\ .$$
 		
-		\item By Lemma \ref{lem:matrixSeriesFactoring} follows
+		\item Following from Lemma \ref{lem:matrixSeriesFactoring}, we have 
 		\begin{longeq}
 			e^{R^{-1}XR}=\sum^\infty_{k=0}\frac{1}{k!}(R^{-1}XR)^{k}=\sum^\infty_{k=0}\frac{1}{k!}R^{-1}X^{k}R=R^{-1}\left(\sum^\infty_{k=0}\frac{1}{k!}X^{k}\right)R=R^{-1}e^{X}R\ . 
 		\end{longeq}
 
 		\item The elements of the matrix $e^{tX}=\sum^\infty_{k=0}\frac{t^k}{k!}X^{k}=(e_{i,j}(t))_{n\times n}$ are equal to
 		$$e_{i,j}(t)=\sum^\infty_{k=0}\frac{t^k}{k!}a^{(k)}_{i,j}\ ,$$
-		where $X^k=(a^{(k)}_{i,j})$. To differentiate the elements of $e^{tX}$ we need to first show that the series converges for any $t\in\R$. By Corollary \ref{cor:elementConvergence} the series $\sum^\infty_{k=0}\frac{t^k}{k!}a^{(k)}_{i,j}$ is absolutely convergent for every $t\in\K$. We can now differentiate the individual elements 
+		where $X^k=(a^{(k)}_{i,j})_{n\times n}$. By Corollary \ref{cor:elementConvergence} the series $\sum^\infty_{k=0}\frac{t^k}{k!}a^{(k)}_{i,j}$ is absolutely convergent for every $t\in\K$. We can now differentiate the individual elements (see \cite{Pick}, Věta 8.2.2.)
 		$$\frac{d}{dt}e_{i,j}(t)=\frac{d}{dt}\sum^\infty_{k=0}\frac{t^k}{k!}a^{(k)}_{i,j}=\sum^\infty_{k=1}\frac{t^{k-1}}{(k-1)!}a^{(k)}_{i,j}=\sum^\infty_{k=0}\frac{t^{k}}{k!}a^{(k+1)}_{i,j}\ .$$ 
 		Using Lemma \ref{lem:matrixSeriesFactoring} we get the desired result
 		\begin{longeq}
@@ -168,32 +180,31 @@ For this definition to be valid, we need to show that the series converges for a
 			&=\sum^\infty_{k=0}\frac{1}{k!}(A+B)^{k}
 			=e^{A+B}\ .
 		\end{align*}
-		The second and the third equalities hold by Lemma \ref{lem:matrixSeriesFactoring}. The crucial point is the fifth equality in which we reorder the elements of the series as depicted in Figure \ref{fig:reordering}. 
-		\begin{center}
-			\includegraphics[width=70mm]{reordering.pdf}
+		The second and the third equalities hold by Lemma \ref{lem:matrixSeriesFactoring}, and the penultimate equality holds by the assumption $AB=BA$. The crucial point is the fifth equality in which we reorder the elements of the series as depicted in Figure \ref{fig:reordering}. 
+		\begin{figure}[hp]
+			\centering
+			\includegraphics[width=70mm]{reordering_cropped.pdf}
+			\captionsetup{justification=centering,margin=2cm}
 			\captionof{figure}{}
 			\label{fig:reordering}
-		\end{center}
+		\end{figure}
 		%\begingroup
 		%\renewcommand*{\arraystretch}{1.5}
 		%$$
 		%\begin{matrix}
-		%	\alpha^{(1,1)}_{(i,j)} & \alpha^{(1,2)}_{(i,j)} & \alpha^{(1,3)}_{(i,j)} & \alpha^{(1,4)}_{(i,j)} & \ldots \\
-		%	\alpha^{(2,1)}_{(i,j)} & \alpha^{(2,1)}_{(i,j)} & \alpha^{(2,1)}_{(i,j)} & \alpha^{(2,1)}_{(i,j)} & \ldots \\
-		%	\alpha^{(3,1)}_{(i,j)} & \alpha^{(3,1)}_{(i,j)} & \alpha^{(3,1)}_{(i,j)} & \alpha^{(3,1)}_{(i,j)} & \ldots \\
-		%	\alpha^{(4,1)}_{(i,j)} & \alpha^{(4,1)}_{(i,j)} & \alpha^{(4,1)}_{(i,j)} & \alpha^{(4,1)}_{(i,j)} & \ldots \\
+		%	\alpha^{(0,0)}_{(i,j)} & \alpha^{(0,1)}_{(i,j)} & \alpha^{(0,2)}_{(i,j)} & \alpha^{(0,3)}_{(i,j)} & \ldots \\
+		%	\alpha^{(1,0)}_{(i,j)} & \alpha^{(1,1)}_{(i,j)} & \alpha^{(1,2)}_{(i,j)} & \alpha^{(1,3)}_{(i,j)} & \ldots \\
+		%	\alpha^{(2,0)}_{(i,j)} & \alpha^{(2,1)}_{(i,j)} & \alpha^{(2,2)}_{(i,j)} & \alpha^{(2,3)}_{(i,j)} & \ldots \\
+		%	\alpha^{(3,0)}_{(i,j)} & \alpha^{(3,1)}_{(i,j)} & \alpha^{(3,2)}_{(i,j)} & \alpha^{(3,3)}_{(i,j)} & \ldots \\
 		%	\vdots & \vdots & \vdots & \vdots & \ddots
 		%\end{matrix}
 		%$$
 		%\endgroup
-		The equality holds as long as the original series is absolutely convergent, which is true by the Corollary \ref{cor:elementConvergence}. In the penultimate equality, we are using the assumption $AB=BA$. 
+		The equality holds as long as the original series is absolutely convergent. This follows from the inequality  
+		$$\sum^N_{k=0}\sum^M_{l=0}\abs{\frac{1}{k!l!}\alpha^{(k,l)}_{i,j}}\leq\sum^N_{k=0}\frac{\norm{A}^k_F}{k!}\sum^M_{l=0}\frac{\norm{B}^l_F}{l!}=\left(\sum^N_{k=0}\frac{\norm{A}^k_F}{k!}\right)\cdot\left(\sum^M_{l=0}\frac{\norm{B}^l_F}{l!}\right)\ ,$$
+		and the fact that the expression on the rightmost side is bounded by $e^{\norm{A}_F}e^{\norm{B}_F}$ for $M,N\rightarrow\infty$.
 	\end{enumerate}
 \end{proof}
-
-\begin{remark}
-	TODO
-	The point \ref{lem:point:expConv} in Lemma \ref{lem:expprop} shows that the definition of the matrix exponential is valid.
-\end{remark}
 
 \begin{lemma}
 	\label{lem:matrixExpIdentity}
@@ -204,9 +215,9 @@ For this definition to be valid, we need to show that the series converges for a
 	Follows straight from the definition of the matrix exponential.
 \end{proof}
 
-Now, using properties in Lemma \ref{lem:expprop}, we can see that $\dot{x}(t)=Ax(t)$ is (uniquely) solved by $x(t)=e^{tA}x(0)$. Let us now discuss under what circumstances does the state $x(t)$ converge to $\nullvector$ for $t\rightarrow\infty$. 
+Now, using properties in Lemma \ref{lem:expprop}, we can see that $\dot{x}(t)=Ax(t)$ is solved by $x(t)=e^{tA}x(0)$. The solution is unique which follows from advanced calculus. Let us now discuss under what circumstances does the state $x(t)$ converge to $\nullvector$ for $t\rightarrow\infty$. 
 
-Let $A$ be real or complex matrix. Then there is a regular matrix $R\in \C^{n\times n}$ such that the matrix $$J=R^{-1}AR$$ is in the Jordan normal form. By substituting $x(t)=Ry(t)$, which is equivalent with changing the basis of our system, we get 
+Let $A$ be a real or complex matrix. Then there is a regular matrix $R\in \K^{n\times n}$ such that the matrix $$J=R^{-1}AR$$ is in the Jordan normal form. By substituting $x(t)=Ry(t)$, which is equivalent with changing the basis of our system, we get 
 \begin{align*}
 	R\dot{y}(t)&=ARy(t) \\
 	\dot{y}(t)&=R^{-1}ARy(t) \\
@@ -349,11 +360,11 @@ In this section we will establish the notion of controllability. We will first e
 
 \subsection{Discrete-time systems}
 
-Let us have a continuous dynamical system $\dot{x}(t)=A_1x(t)$, where $A_1$ is a real or complex square matrix. We \textit{discretize} the time, that is, instead of using continuous real time values of $x(t)$ and $\dot{x}(t)$, we will measure these values only at discrete \textit{sampling times} $0,\delta,2\delta,\ldots,k\delta,\ldots$ where $\delta\in\R^+$. We will denote the states at each point in time as follows
-$$x_k=x(t),t\in[k\delta,k\delta+\delta)\ .$$
+Let us have a continuous dynamical system $\dot{x}(t)=A_1x(t)$, where $A_1$ is a real or complex square matrix. We \textit{discretize} the time, that is, instead of using continuous real time values of $x(t)$ and $\dot{x}(t)$, we are interested in these values only at discrete \textit{sampling times} $0,\delta,2\delta,\ldots,k\delta,\ldots$ where $\delta\in\R^+$. We will denote the states at each sampling time as follows
+$$x_k=x(k\delta)\ ,k\in\N_0\ .$$
 The solution of this system is precisely $x(t)=e^{tA_1}x(0)$, as discussed in previous sections. For some $k\in\N$ we get $x_k=x(k\delta)=e^{k\delta A_1}x(0)$ and $x_{k+1}=e^{(k+1)\delta A_1}x(0)=e^{\delta A_1 +k\delta A_1}x(0)$ which by Lemma \ref{lem:expprop}.5 equals $x_{k+1}=e^{\delta A_1 +k\delta A_1}x(0)=e^{\delta A_1}e^{k\delta A_1}x(0)=e^{\delta A_1}x_k$.
 
-Using Lemma \ref{lem:expprop}.5 we obtain 
+Using Lemma \ref{lem:expprop} we obtain 
 \begin{align*}
 	x_{k+1}
 	&=e^{(k+1)\delta A_1}x(0) \\
@@ -413,7 +424,7 @@ We have seen that by left multiplying $\mathcal{R}(A,B)$ by $A$, we get the same
 	$\mathcal{R}(A,B)$ is a $A$-invariant subspace.
 \end{remark} 
 
-The maximum dimension of $\mathcal{R}(A,B)$ is, of course, $n$. This leads us to important property of pair $(A,B)$, where we want to able to get the system into any state in state space by controlling it with our control vector $u(t)$, i.e., choosing appropriate $u(t)$. Therefore, we desire that $\mathcal{R}(A,B)=\K^n$. The equivalent condition is $\text{dim}\mathcal{R}(A,B)=n$.
+The maximum dimension of $\mathcal{R}(A,B)$ is, of course, $n$. This leads us to important property of pair $(A,B)$, where we want to be able to get the system into any state in state space by controlling it with our control vector $u(t)$, i.e., choosing appropriate $u(t)$. Therefore, we desire that $\mathcal{R}(A,B)=\K^n$. The equivalent condition is $\text{dim}\mathcal{R}(A,B)=n$.
 
 \begin{definition}
 	Let $\K$ be a field and let $A \in \K^{n \times n}$, $B \in \K^{n \times m}$, $n,m \in \N$. The pair $(A,B)$ is \termdef{controllable} if $\textnormal{dim}\mathcal{R}(A,B)=n$.
@@ -425,7 +436,7 @@ The maximum dimension of $\mathcal{R}(A,B)$ is, of course, $n$. This leads us to
 	In this section we assume, that $\K$ is a field of either real or complex numbers and that $A\in\K^{n\times n}$, $B\in\K^{n\times m}$.
 \end{remark}
 
-We will now show that the condition for \textit{discrete-time systems} also characterizes \textit{continuous-time systems}. For this we have to express solution of such system using matrices $A^iB$ for $i\in \N_0$. 
+We will now show that the condition for controllability of \textit{discrete-time systems} also characterizes controllable \textit{continuous-time systems}. For this we have to express solution of such system using matrices $A^iB$ for $i\in \N_0$. 
 
 We utilize matrix exponential in solving system of inhomogeneous linear system $\dot{x}(t)=Ax(t)+Bu(t)$. By left multiplying it by $e^{-tA}$ we get
 \begin{align*}
@@ -442,10 +453,10 @@ Note, we used $-AA=A(-A)\Rightarrow e^{-tA}A=Ae^{-tA}$ from Lemma \ref{lem:exppr
 Now it is clear that in system where $x(0)=\nullvector$ can every state in time $t\in \R^+$ be expressed as $$x(t)=\int^t_0 e^{(t-s)A}Bu(s)ds$$
 
 \begin{definition}
-	We say that a state $x(t)$ can be \termdef{reached} in time $t$, if there exists a control $u(x)\colon[0,t]\rightarrow\K^m$ such that
-	$$x(t)=\int^t_0 e^{(t-s)A}Bu(s)ds\ .$$
+	We say that a state $x\in\K^n$ can be \termdef{reached in the time $t$}, if there exists a control $u(x)\colon[0,t]\rightarrow\K^m$ such that
+	$$x=\int^t_0 e^{(t-s)A}Bu(s)ds\ .$$
 
-	The set of all states that can be reached in the times $t$ is denoted by $\mathcal{R}^t$. The set $\mathcal{R}=\cup_{t\in\R^+}\mathcal{R}^t$ of all states that can be reached, is called a \termdef{reachable space}.
+	The set of all states that can be reached in the time $t$ is denoted by $\mathcal{R}^t$. The set $\mathcal{R}=\cup_{t\in\R^+}\mathcal{R}^t$ of all states that can be reached, is called a \termdef{reachable space}.
 \end{definition}
 
 \begin{definition}
@@ -469,7 +480,11 @@ Now it is clear that in system where $x(0)=\nullvector$ can every state in time 
 		=\int^t_0\sum^\infty_{k=0}\sum^m_{j=1}\frac{(t-s)^k}{k!}\alpha^{(k)}_{i,j}u_j(s)ds
 	$$
 	
-	Now, in order to be able to modify this expression, we will prove that the series $\sum^\infty_{k=0}\frac{(t-s)^k}{k!}\alpha^{(k)}_{i,j}u_j(s)$ is convergent for every position $(i, j)$. This comes from Corollary \ref{cor:elementConvergence}, and from the fact that we can factor constants out of convergent number series. Because of the the convergence, we can now swap the integral and the series:
+	Now, in order to be able to modify this expression, we will prove that the series $\sum^\infty_{k=0}\frac{(t-s)^k}{k!}\alpha^{(k)}_{i,j}u_j(s)$ is convergent for every position $(i, j)$. This follows from
+	\begin{longeq}
+		\abs{\sum^\infty_{k=0}\frac{(t-s)^k}{k!}\alpha_{i,j}^{(k)}u_j(s)}\leq \sum^\infty_{k=0}\frac{\abs{t-s}^k}{k!}\abs*{\alpha_{i,j}^{(k)}}\abs*{u_j(s)}\leq\sum^\infty_{k=0}\frac{\norm{(t-s)A}_F^k}{k!}\norm{B}_F\abs*{u_j(s)}\leq\abs*{u_j(s)}\norm{B}_Fe^{\norm{(t-s)A}}\ ,
+	\end{longeq}
+	where the second inequality holds by Corollary \ref{cor:elementConvergence}, and the third inequality by the fact that we can factor constants $\norm{B}_F$ and $u_j(s)$ out of convergent number series $e^{\norm{(t-s)A}}$. Because of the absolute convergence, we can now swap the integral and the series:
 	\begin{align*}
 		x_i(t)
 		&=\int^t_0\sum^\infty_{k=0}\sum^m_{j=1}\frac{(t-s)^k}{k!}\alpha^{(k)}_{i,j}u_j(s)ds
